# shinkansen

./: CMakeLists.txt  README.md
include/: skpch.h
include/core/: ring_buffer.h
include/util/: sk_math.h
src/: main.cpp  skpch.h
src/core/: ring_buffer.h  shinkansen.h  sk_math.h
test/core/: ring_buffer_test.cpp  shinkansen_test.cpp
